20241112study